2010-01-09  Jakub Jelinek  <jakub@redhat.com>

	* gnu/gcj/convert/Convert.java (version): Update copyright notice
	dates.
	* gnu/gcj/tools/gcj_dbtool/Main.java (main): Likewise.

2009-12-09  Bryce McKinlay  <bmckinlay@gmail.com>

	PR java/41991
	* configure.ac (SYSTEMSPEC): Pass -allow_stack_execute to Darwin
	linker.
	* Makefile.am (gij_LDFLAGS): Remove extra_gij_ldflags.
	* configure: Regenerate.
	* Makefile.in: Regenerate.

2009-11-17  Andrew Haley  <aph@redhat.com>

	* posix-threads.cc (park): Rewrite code to handle time.
	Move mutex lock before the call to compare_and_swap to avoid a
	race condition.
	Add some assertions.
	(unpark): Add an assertion.
	(init): Move here from posix-threads.h.
	* include/posix-threads.h (destroy): removed.

2009-10-15  Release Manager

	* GCC 4.4.2 released.

2009-07-23  Matthias Klose  <doko@ubuntu.com>

	* contrib/aotcompile.py.in: Use hashlib instead of md5 if available.

2009-07-22  Release Manager

	* GCC 4.4.1 released.

2009-05-11  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (install-data-local): Fix symlinks to header files.
	Don't create a symlink for javac.
	* Makefile.in: Regenerate.

2009-04-28  Andrew Haley  <aph@redhat.com>

	PR libgcj/39899
	* Makefile.am (libgcj_tools_la_LDFLAGS): Add
	-fno-bootstrap-classes to libgcj_tools_la_GCJFLAGS.
	* Makefile.in: Regenerate.

2009-04-26  Matthias Klose <doko@ubuntu.com>

	* contrib/aot-compile.in: Print diagnostics for malformed or invalid
	class files.
	* contrib/generate-cacerts.pl.in: New.
	* configure.ac (AC_CONFIG_FILES): Add generate-cacerts.pl.

2009-04-24  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Create missing directory gnu/java/security/jce/prng.
	* configure: Regenerate.

2009-04-21  Release Manager

	* GCC 4.4.0 released.

2009-04-09  Jack Howarth  <howarth@bromo.med.uc.edu>

	* configure.host: Restore match for darwin9 or later.
	* configure.ac: Likewise.
	* configure: Regenerate.

2009-03-11  Andrew Haley  <aph@redhat.com>
