@@ -1,3 +1,13 @@
+2010-01-12  Matthias Klose  <doko@ubuntu.com>
+
+	PR libjava/40859, backported from:
+
+	2009-08-12  Andrew Haley  <aph@redhat.com>
+	* configure.host (arm*-linux*): Add -Wno-abi to cxxflags.
+	(testsuite/libjava.jvmti/jvmti-interp.exp): Likewise.
+	(testsuite/libjava.jvmti/jvmti.exp): Likewise.
+	(testsuite/libjava.jni/jni.exp): Likewise.
+
 2010-01-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* gnu/gcj/convert/Convert.java (version): Update copyright notice
